--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
