--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-wavify": "^1.5.7",
     "sassy-datepicker": "^0.7.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
