--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "react": "^17.0.2",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.8.4",
     "react-redux": "^7.2.6",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-wavify": "^1.5.7",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "sassy-datepicker": "^0.7.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
