--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^17.0.2",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-google-autocomplete": "^2.7.0",
     "react-h5-audio-player": "^3.8.4",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
